// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component when a user is logged in should render with user functions 1`] = `
<styled.div>
  <styled.div>
    <Styled(Link)
      to="/"
    >
      trackr
    </Styled(Link)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/"
    >
      Applications
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/interviews"
    >
      Interviews
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/data"
    >
      Data
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      to="/applications"
    >
      Add New
    </Styled(NavLink)>
  </styled.div>
  <styled.div>
    <styled.div>
      test
    </styled.div>
    <styled.div>
      <styled.button
        onClick={[Function]}
      >
        Logout
      </styled.button>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Header Component when a user is not logged in should render with authentication functions 1`] = `
<styled.div>
  <styled.div>
    <Styled(Link)
      to="/"
    >
      trackr
    </Styled(Link)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/"
    >
      Applications
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/interviews"
    >
      Interviews
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      exact={true}
      to="/data"
    >
      Data
    </Styled(NavLink)>
    <Styled(NavLink)
      activeClassName="is-active"
      to="/applications"
    >
      Add New
    </Styled(NavLink)>
  </styled.div>
  <styled.div>
    <Styled(NavLink)
      to="/login"
    >
      Login
    </Styled(NavLink)>
    <Styled(NavLink)
      to="/register"
    >
      Sign up
    </Styled(NavLink)>
  </styled.div>
</styled.div>
`;
